--- a/src/main/resources/fxml/PopupContent.fxml
+++ b/src/main/resources/fxml/PopupContent.fxml
@@ -1,19 +1,49 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<VBox prefHeight="300" prefWidth="300" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controllers.PopupContentController">
-    <Label fx:id="itemNameLabel" text="Item Name: Laptop" />
-    <Label fx:id="descriptionLabel" text="Description: Found a laptop near Block C" />
-    <ImageView fx:id="itemImageView" fitHeight="217.0" fitWidth="255.0" preserveRatio="true">
+<VBox alignment="TOP_CENTER" prefHeight="556.0" prefWidth="503.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controllers.PopupContentController">
+    <Label fx:id="itemNameLabel" text="Item Name: Laptop" textAlignment="CENTER">
+      <VBox.margin>
+         <Insets top="10.0" />
+      </VBox.margin>
+      <font>
+         <Font name="System Bold Italic" size="22.0" />
+      </font></Label>
+    <ImageView fx:id="itemImageView" fitHeight="270.0" fitWidth="550.0" preserveRatio="true">
         <image>
             <Image url="@../images/laptop.png" />
         </image>
+      <VBox.margin>
+         <Insets top="20.0" />
+      </VBox.margin>
     </ImageView>
+    <Label fx:id="descriptionLabel" alignment="TOP_LEFT" prefHeight="100.0" prefWidth="367.0" text="Description: Found a laptop near Block C" textAlignment="CENTER">
+      <padding>
+         <Insets top="10.0" />
+      </padding>
+      <VBox.margin>
+         <Insets top="20.0" />
+      </VBox.margin></Label>
+   <Label fx:id="dateFoundLabel" alignment="TOP_LEFT" prefHeight="34.0" prefWidth="367.0" text="Date Reported: " textAlignment="CENTER">
+      <padding>
+         <Insets top="10.0" />
+      </padding>
+   </Label>
+   <Label fx:id="locationFoundLabel" alignment="TOP_LEFT" prefHeight="34.0" prefWidth="367.0" text="Location:" textAlignment="CENTER">
+      <padding>
+         <Insets top="10.0" />
+      </padding>
+   </Label>
     <!-- Add more content or customize as needed -->
-    <Button fx:id="claimButton" text="Claim" />
+    <Button fx:id="claimButton" alignment="TOP_CENTER" text="Claim">
+      <VBox.margin>
+         <Insets bottom="10.0" top="10.0" />
+      </VBox.margin></Button>
 </VBox>
