--- a/src/main/resources/fxml/userDashboard.fxml
+++ b/src/main/resources/fxml/userDashboard.fxml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import javafx.collections.FXCollections?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
@@ -21,8 +24,6 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<?import javafx.collections.FXCollections?>
-<?import java.lang.String?>
 <BorderPane stylesheets="@../stylesheets/userDashboard.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controllers.userDashboardController">
 
         <!-- Left Sidebar -->
@@ -72,7 +73,7 @@
                             <ListView fx:id="fileList" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
 
                             <Button onAction="#submitReport" styleClass="submit-button" text="Submit" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="5" />
-                  <ComboBox fx:id="reportType" prefWidth="150.0" promptText="Type" GridPane.rowIndex="2" >
+                  <ComboBox fx:id="reportType" prefWidth="150.0" promptText="Type" GridPane.rowIndex="2">
                       <items>
                           <FXCollections fx:factory="observableArrayList">
                               <String fx:value="found" />
@@ -88,9 +89,19 @@
                 </Tab>
 
 
-                <Tab fx:id="foundItemTab" text="Found Items">
+                <Tab fx:id="foundItemTab" text="View Items">
                     <VBox prefHeight="846.0" prefWidth="988.0" spacing="10" style="-fx-padding: 10;">
-                        <Label styleClass="heading" text="Found Items" />
+                        <Label styleClass="heading" text="Items" />
+               <ChoiceBox fx:id="viewReportType" prefWidth="150.0" >
+                   <items>
+                       <FXCollections fx:factory="observableArrayList">
+                           <String fx:value="found" />
+                           <String fx:value="lost" />
+                           <!-- Add more options as needed -->
+                       </FXCollections>
+                     </items>
+
+               </ChoiceBox>
                <ScrollPane prefHeight="793.0" prefWidth="1074.0">
                   <content>
                               <FlowPane fx:id="foundItemContainer" hgap="20.0" prefHeight="383.0" prefWidth="1000.0" styleClass="found-items-container" vgap="10.0">
@@ -140,7 +151,7 @@
                                                    <Insets bottom="10.0" left="1.0" right="10.0" top="10.0" />
                                                 </padding>
                                              </Button>
-                                                          <Button  prefHeight="30.0" prefWidth="127.0" styleClass="more-info-button" text="More Info" GridPane.columnIndex="1" GridPane.halignment="CENTER" />
+                                                          <Button prefHeight="30.0" prefWidth="127.0" styleClass="more-info-button" text="More Info" GridPane.columnIndex="1" GridPane.halignment="CENTER" />
                                           </children>
                                           <padding>
                                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -205,7 +216,7 @@
                                                                       <Insets bottom="10.0" left="1.0" right="10.0" top="10.0" />
                                                                   </padding>
                                                               </Button>
-                                                              <Button  prefHeight="30.0" prefWidth="127.0" styleClass="more-info-button" text="More Info" GridPane.columnIndex="1" GridPane.halignment="CENTER" />
+                                                              <Button prefHeight="30.0" prefWidth="127.0" styleClass="more-info-button" text="More Info" GridPane.columnIndex="1" GridPane.halignment="CENTER" />
                                                           </children>
                                                           <padding>
                                                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
